--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Responsive QR Code Scanner</title>
+  <title>QR Code Scanner + Media Preview</title>
   <script src="https://unpkg.com/html5-qrcode"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       font-family: Arial, sans-serif;
@@ -22,7 +20,6 @@
       flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
-      align-items: flex-start;
     }
 
     .box {
@@ -34,29 +31,35 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
+    h2 {
+      margin-top: 0;
+      text-align: center;
+    }
+
     #reader {
       width: 100%;
     }
 
-    #scanned-text {
-      font-size: 18px;
+    #output {
+      font-size: 16px;
       word-break: break-word;
-      color: #333;
       margin-top: 10px;
     }
 
-    h2 {
-      margin-top: 0;
-      font-size: 20px;
-      text-align: center;
+    iframe, video, img, audio {
+      width: 100%;
+      margin-top: 10px;
+      border-radius: 8px;
+    }
+
+    iframe {
+      height: 300px;
+      border: none;
     }
 
     @media (max-width: 600px) {
-      h2 {
-        font-size: 18px;
-      }
-      #scanned-text {
-        font-size: 16px;
+      iframe {
+        height: 200px;
       }
     }
   </style>
@@ -70,18 +73,65 @@
     </div>
     <div class="box">
       <h2>Scanned Result</h2>
-      <div id="scanned-text">Waiting for scan...</div>
+      <div id="output">Waiting for scan...</div>
     </div>
   </div>
 
   <script>
-    function onScanSuccess(decodedText, decodedResult) {
-      document.getElementById("scanned-text").textContent = decodedText;
+    function isImage(url) {
+      return /\.(jpeg|jpg|gif|png|webp)$/i.test(url);
+    }
+
+    function isVideo(url) {
+      return /\.(mp4|webm|ogg)$/i.test(url);
+    }
+
+    function isAudio(url) {
+      return /\.(mp3|wav|ogg)$/i.test(url);
+    }
+
+    function isPDF(url) {
+      return /\.pdf$/i.test(url);
+    }
+
+    function getYouTubeEmbedURL(url) {
+      let videoId = "";
+
+      if (url.includes("youtube.com/watch?v=")) {
+        videoId = new URL(url).searchParams.get("v");
+      } else if (url.includes("youtu.be/")) {
+        videoId = url.split("youtu.be/")[1].split("?")[0];
+      }
+
+      return videoId ? `https://www.youtube.com/embed/${videoId}?rel=0` : null;
+    }
+
+    function onScanSuccess(decodedText) {
+      const output = document.getElementById("output");
+      let content = `<p><strong>Scanned:</strong> <a href="${decodedText}" target="_blank">${decodedText}</a></p>`;
+
+      const ytEmbed = getYouTubeEmbedURL(decodedText);
+
+      if (isImage(decodedText)) {
+        content += `<img src="${decodedText}" alt="Scanned Image">`;
+      } else if (isVideo(decodedText)) {
+        content += `<video controls><source src="${decodedText}"></video>`;
+      } else if (isAudio(decodedText)) {
+        content += `<audio controls><source src="${decodedText}"></audio>`;
+      } else if (isPDF(decodedText)) {
+        content += `<iframe src="${decodedText}"></iframe>`;
+      } else if (ytEmbed) {
+        content += `<iframe src="${ytEmbed}" allowfullscreen></iframe>`;
+      } else if (decodedText.startsWith("http")) {
+        content += `<iframe src="${decodedText}"></iframe>`;
+      }
+
+      output.innerHTML = content;
     }
 
     const html5QrcodeScanner = new Html5QrcodeScanner(
-      "reader", 
-      { fps: 10, qrbox: { width: 250, height: 250 } }, 
+      "reader",
+      { fps: 10, qrbox: { width: 250, height: 250 } },
       false
     );
 
