--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR ID Overlay</title>
+    <title>PTTF Umpire Tracker</title>
     <link rel="stylesheet" href="style.css">
     <!-- QR Code Scanner Library -->
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 </head>
 <body>
 
-<h1>QR Code ID Overlay</h1>
+<h1>PTTF Umpire Tracker</h1>
 
 <div id="reader" style="width: 300px;"></div>
 
