--- a/index.html
+++ b/index.html
@@ -1,34 +1,29 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PTTF Umpire Tracker</title>
-  <!-- Pontano Sans from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <!-- html5-qrcode -->
-  <script src="https://unpkg.com/html5-qrcode@2.3.7/minified/html5-qrcode.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QR Code Scan Test</title>
+    <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
-<body>
-  <header>
-    <h1>PTTF Umpire Tracker</h1>
-  </header>
-  <main>
-    <section class="scanner">
-      <div id="reader" style="width:320px"></div>
-      <p class="hint">Allow camera access and point at a QR code.</p>
-    </section>
+<body style="font-family: 'Pontano Sans', sans-serif; text-align: center; padding: 50px;">
+    <h1>QR Scanner Test</h1>
+    <div id="reader" style="width:300px;margin:auto;"></div>
+    <p id="result">Scan a QR code...</p>
 
-    <section id="id-card" class="card hidden" aria-live="polite">
-      <img src="assets/id-template.png" alt="ID template" class="id-template">
-      <img id="id-photo" class="id-photo" alt="Profile photo" src="assets/sample1.jpg">
-      <div id="id-name" class="id-name">Name</div>
-      <div id="id-role" class="id-role">Role</div>
-      <div id="id-affil" class="id-affil">Affiliation</div>
-    </section>
-  </main>
+    <script>
+        function onScanSuccess(decodedText, decodedResult) {
+            document.getElementById('result').innerText = "Scanned: " + decodedText;
+        }
 
-  <script src="script.js"></script>
+        function onScanError(errorMessage) {
+            // Ignore scan errors for now
+        }
+
+        let html5QrcodeScanner = new Html5QrcodeScanner(
+            "reader", { fps: 10, qrbox: 250 });
+        html5QrcodeScanner.render(onScanSuccess, onScanError);
+    </script>
 </body>
 </html>
