--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Scan Test</title>
+    <title>PTTF Umpire Tracer</title>
     <script src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body style="font-family: 'Pontano Sans', sans-serif; text-align: center; padding: 50px;">
-    <h1>QR Scanner Test</h1>
+    <h1>PTTF Umpire Tracer</h1>
     <div id="reader" style="width:300px;margin:auto;"></div>
     <p id="result">Scan a QR code...</p>
 
