--- a/index.html
+++ b/index.html
@@ -3,26 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PTTF Umpire Tracer</title>
-    <script src="https://unpkg.com/html5-qrcode"></script>
+    <title>QR Scanner with ID Display</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-image: url('images/background.jpg'); /* GitHub folder image */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            background-color: rgba(255, 255, 255, 0.85);
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            text-align: center;
+            max-width: 350px;
+            width: 100%;
+        }
+        #preview {
+            width: 100%;
+            border-radius: 8px;
+        }
+        .id-card {
+            margin-top: 20px;
+            padding: 10px;
+            background: #f4f4f4;
+            border-radius: 8px;
+            display: none;
+        }
+        .id-card img {
+            width: 100%;
+            border-radius: 8px;
+        }
+        .id-info {
+            margin-top: 10px;
+            text-align: left;
+        }
+        .id-info p {
+            margin: 4px 0;
+        }
+    </style>
 </head>
-<body style="font-family: 'Pontano Sans', sans-serif; text-align: center; padding: 50px;">
-    <h1>PTTF Umpire Tracer</h1>
-    <div id="reader" style="width:300px;margin:auto;"></div>
-    <p id="result">Scan a QR code...</p>
+<body>
 
-    <script>
-        function onScanSuccess(decodedText, decodedResult) {
-            document.getElementById('result').innerText = "Scanned: " + decodedText;
+<div class="container">
+    <h2>QR Code Scanner</h2>
+    <video id="preview"></video>
+    
+    <div class="id-card" id="idCard">
+        <img id="idImage" src="images/id_placeholder.jpg" alt="ID Card">
+        <div class="id-info">
+            <p><strong>Name:</strong> <span id="name">---</span></p>
+            <p><strong>ID Number:</strong> <span id="idNumber">---</span></p>
+            <p><strong>Course:</strong> <span id="course">---</span></p>
+        </div>
+    </div>
+</div>
+
+<!-- Instascan Library -->
+<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+<script>
+    let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+    scanner.addListener('scan', function (content) {
+        console.log('Scanned QR code:', content);
+
+        // Placeholder: Replace with Google Sheets fetch logic
+        // Example: Simulating data retrieval
+        let studentData = {
+            name: "Juan Dela Cruz",
+            idNumber: "2025-001",
+            course: "BS Computer Science",
+            image: "images/sample_id.jpg" // Placeholder in GitHub folder
+        };
+
+        // Update ID Card display
+        document.getElementById('name').innerText = studentData.name;
+        document.getElementById('idNumber').innerText = studentData.idNumber;
+        document.getElementById('course').innerText = studentData.course;
+        document.getElementById('idImage').src = studentData.image;
+        document.getElementById('idCard').style.display = 'block';
+    });
+
+    Instascan.Camera.getCameras().then(function (cameras) {
+        if (cameras.length > 0) {
+            scanner.start(cameras[0]);
+        } else {
+            alert('No cameras found.');
         }
+    }).catch(function (e) {
+        console.error(e);
+    });
+</script>
 
-        function onScanError(errorMessage) {
-            // Ignore scan errors for now
-        }
-
-        let html5QrcodeScanner = new Html5QrcodeScanner(
-            "reader", { fps: 10, qrbox: 250 });
-        html5QrcodeScanner.render(onScanSuccess, onScanError);
-    </script>
 </body>
 </html>
