--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div class="container">
     <h2>QR Code Scanner</h2>
-    <video id="preview"></video>
+    <video id="preview" autoplay playsinline style="width:100%; height:250px; background:#000; border-radius:8px;"></video>
     
     <div class="id-card" id="idCard">
         <img id="idImage" src="images/id_placeholder.jpg" alt="ID Card">
