--- a/index.html
+++ b/index.html
@@ -92,14 +92,16 @@
     });
 
     Instascan.Camera.getCameras().then(function (cameras) {
-        if (cameras.length > 0) {
-            scanner.start(cameras[0]);
-        } else {
-            alert('No cameras found.');
-        }
-    }).catch(function (e) {
-        console.error(e);
-    });
+    if (cameras.length > 0) {
+        scanner.start(cameras[0]);
+    } else {
+        alert('No cameras found.');
+    }
+}).catch(function (e) {
+    console.error(e);
+    alert("Error accessing camera: " + e);
+});
+   
 </script>
 
 </body>
