--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       text-align: center;
-      max-width: 350px;
+      max-width: 380px;
       width: 100%;
     }
     #preview {
@@ -48,16 +48,6 @@
     .id-info p {
       margin: 4px 0;
     }
-    .controls {
-      margin-top: 10px;
-    }
-    select {
-      padding: 5px;
-      border-radius: 6px;
-      border: 1px solid #aaa;
-      font-size: 14px;
-      width: 100%;
-    }
   </style>
 </head>
 <body>
@@ -70,7 +60,10 @@
       <img id="idImage" src="images/id_placeholder.jpg" alt="ID Card">
       <div class="id-info">
         <p><strong>Name:</strong> <span id="name">---</span></p>
-        <p><strong>ID Number:</strong> <span id="idNumber">---</span></p>
+        <p><strong>ID (QR):</strong> <span id="idNumber">---</span></p>
+        <p><strong>Address:</strong> <span id="address">---</span></p>
+        <p><strong>Birthday:</strong> <span id="birthday">---</span></p>
+        <p><strong>Sex:</strong> <span id="sex">---</span></p>
         <p><strong>Umpire Class:</strong> <span id="umpireClass">---</span></p>
         <p><strong>Status:</strong> <span id="status">---</span></p>
       </div>
@@ -85,63 +78,60 @@
     const idImage = document.getElementById('idImage');
     const nameField = document.getElementById('name');
     const idNumberField = document.getElementById('idNumber');
+    const addressField = document.getElementById('address');
+    const birthdayField = document.getElementById('birthday');
+    const sexField = document.getElementById('sex');
     const umpireClassField = document.getElementById('umpireClass');
     const statusField = document.getElementById('status');
-    const cameraSelect = document.getElementById('cameraSelect');
 
     const scanner = new Instascan.Scanner({ video: videoElement });
 
     scanner.addListener('scan', content => {
       console.log('Scanned QR code:', content);
 
-      // TODO: Replace with actual fetch from Google Sheets or API
-      const umpireData = {
-        name: "Juan Dela Cruz",
-        idNumber: "2025-001",
-        umpireClass: "National Umpire",
-        status: "Active",
-        image: "images/sample_id.jpg"
-      };
+      const baseUrl = 'https://script.google.com/macros/s/AKfycbz-3ySdh3DBoe2St_NhNpCHlsREN36b5TAUMFiO8BqRQjrhePfWCXThEt4lDRHTLQrz/exec';
+      const url = `${baseUrl}?qr=${encodeURIComponent(content)}`;
 
-      // Update UI
-      nameField.textContent = umpireData.name;
-      idNumberField.textContent = umpireData.idNumber;
-      umpireClassField.textContent = umpireData.umpireClass;
-      statusField.textContent = umpireData.status;
-      idImage.src = umpireData.image;
-      idCard.style.display = 'block';
+      fetch(url)
+        .then(res => res.json())
+        .then(umpireData => {
+          console.log('Fetched data:', umpireData);
+
+          if (umpireData && umpireData["Given Name"]) {
+            // Full name = Given + Middle + Surname
+            nameField.textContent = `${umpireData["Given Name"]} ${umpireData["Middle Name"]} ${umpireData["Surname"]}`;
+            
+            idNumberField.textContent = content; // QR code value
+            addressField.textContent = umpireData["Address"];
+            birthdayField.textContent = umpireData["Birthday"];
+            sexField.textContent = umpireData["Sex"];
+            umpireClassField.textContent = umpireData["UmpireClass"];
+            statusField.textContent = umpireData["Status"];
+
+            // Photo URL from sheet
+            if (umpireData["PhotoURL"]) {
+              idImage.src = umpireData["PhotoURL"];
+            } else {
+              idImage.src = "images/id_placeholder.jpg";
+            }
+
+            idCard.style.display = 'block';
+          } else {
+            alert("No record found for QR: " + content);
+            idCard.style.display = 'none';
+          }
+        })
+        .catch(err => {
+          console.error("Error fetching data:", err);
+          alert("Error fetching data");
+        });
     });
 
     // Load available cameras
     Instascan.Camera.getCameras()
       .then(cameras => {
         if (cameras.length > 0) {
-          // Populate dropdown
-          cameras.forEach((cam, i) => {
-            const option = document.createElement('option');
-            option.value = i;
-            option.text = cam.name || `Camera ${i + 1}`;
-            cameraSelect.appendChild(option);
-          });
-
-          // Try to auto-select rear camera if available
-          let defaultCamIndex = 0;
-          cameras.forEach((cam, i) => {
-            if (cam.name.toLowerCase().includes('back') ||
-                cam.name.toLowerCase().includes('rear') ||
-                cam.name.toLowerCase().includes('environment')) {
-              defaultCamIndex = i;
-            }
-          });
-
-          cameraSelect.selectedIndex = defaultCamIndex;
-          scanner.start(cameras[defaultCamIndex]);
-
-          // Change camera when user selects
-          cameraSelect.addEventListener('change', e => {
-            scanner.start(cameras[e.target.value]);
-          });
-
+          scanner.start(cameras[0]); // start first camera
         } else {
           alert('No cameras found.');
         }
