--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <h1>PTTF Umpire Tracker</h1>
   
   <!-- Standby image shown before scanning -->
-  <img id="standbyImage" src="images/id_placeholder.png" alt="Standby Placeholder">
+  <img id="standbyImage" src="images/id_placeholder.jpg" alt="Standby Placeholder">
 
   <!-- Buttons -->
   <button id="startBtn" class="btn">Start QR Scan</button>
