--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('images/background.jpg') center/cover no-repeat fixed;
+      background: url('images/background.png') center/cover no-repeat fixed;
       color: #333;
       text-align: center;
       padding: 20px;
@@ -85,7 +85,7 @@
   <h1>PTTF Umpire Tracker</h1>
   
   <!-- Standby image shown before scanning -->
-  <img id="standbyImage" src="images/id_placeholder.jpg" alt="Standby Placeholder">
+  <img id="standbyImage" src="images/id_placeholder.png" alt="Standby Placeholder">
 
   <!-- Buttons -->
   <button id="startBtn" class="btn">Start QR Scan</button>
