--- a/index.html
+++ b/index.html
@@ -1,187 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PTTF Umpire Tracker</title>
+  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('images/background.png') center/cover no-repeat fixed;
-      color: #333;
-      text-align: center;
-      padding: 20px;
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    h1 {
-      margin-bottom: 20px;
+    .container {
+      display: flex;
+      gap: 20px;
+      align-items: flex-start;
     }
-    #preview, #standbyImage {
-      width: 100%;
-      max-width: 500px;
-      height: 400px;
+    .scanner, .id-card {
+      background: white;
       border-radius: 12px;
-      border: 3px solid #333;
-      object-fit: cover;
-      margin: 0 auto;
-      display: block;
-    }
-    #preview {
-      display: none;
-      background: #000;
-    }
-    #id-card {
-      width: 500px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       padding: 20px;
-      background: #fff;
-      border: 2px solid #333;
-      border-radius: 16px;
-      box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
-      margin: 20px auto;
       text-align: center;
-      display: none;
     }
-    #id-card h2 {
-      margin: 10px 0;
-      font-size: 1.8em;
+    .scanner {
+      width: 420px;
+      height: 420px;
     }
-    #id-card p {
-      margin: 6px 0;
-      font-size: 1.2em;
+    #reader {
+      width: 100%;
+      height: 100%;
     }
-    #id-photo {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 2px solid #333;
-      margin-bottom: 12px;
+    .id-card {
+      width: 400px;
+      height: 250px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
     }
-    .btn {
-      margin: 15px 10px;
-      padding: 12px 24px;
-      font-size: 1.2em;
+    .id-card img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+    button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      font-size: 16px;
       border: none;
       border-radius: 8px;
-      color: #fff;
+      background: #007bff;
+      color: white;
       cursor: pointer;
     }
-    #startBtn {
-      background: #007bff;
-    }
-    #startBtn:hover {
+    button:hover {
       background: #0056b3;
-    }
-    #stopBtn {
-      background: #dc3545;
-      display: none;
-    }
-    #stopBtn:hover {
-      background: #a71d2a;
     }
   </style>
 </head>
 <body>
-  <h1>PTTF Umpire Tracker</h1>
-  
-  <!-- Standby image shown before scanning -->
-  <img id="standbyImage" src="images/id_placeholder.png" alt="Standby Placeholder">
+  <div class="container">
+    <!-- QR Scanner Box -->
+    <div class="scanner">
+      <div id="reader">
+        <img id="id_placeholder" src="images/placeholder.jpg" alt="ID Placeholder" />
+      </div>
+      <button onclick="startScanner()">Start Scan</button>
+      <button onclick="stopScanner()">Stop Scan</button>
+    </div>
 
-  <!-- Buttons -->
-  <button id="startBtn" class="btn">Start QR Scan</button>
-  <button id="stopBtn" class="btn">Stop Scan</button>
-
-  <!-- Scanner video -->
-  <video id="preview"></video>
-
-  <!-- ID card display -->
-  <div id="id-card">
-    <img id="id-photo" src="" alt="Profile Photo">
-    <h2 id="full-name">Full Name</h2>
-    <p><strong>Address:</strong> <span id="address"></span></p>
-    <p><strong>Birthday:</strong> <span id="birthday"></span></p>
-    <p><strong>Sex:</strong> <span id="sex"></span></p>
-    <p><strong>Umpire Class:</strong> <span id="umpireClass"></span></p>
-    <p><strong>Status:</strong> <span id="status"></span></p>
+    <!-- ID Card Display -->
+    <div class="id-card">
+      <img id="id_display" src="images/placeholder.jpg" alt="ID Card">
+    </div>
   </div>
 
-  <!-- Instascan library -->
-  <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
   <script>
-    const standbyImage = document.getElementById('standbyImage');
-    const preview = document.getElementById('preview');
-    const idCard = document.getElementById('id-card');
-    const fullNameEl = document.getElementById('full-name');
-    const addressEl = document.getElementById('address');
-    const birthdayEl = document.getElementById('birthday');
-    const sexEl = document.getElementById('sex');
-    const umpireClassEl = document.getElementById('umpireClass');
-    const statusEl = document.getElementById('status');
-    const idPhotoEl = document.getElementById('id-photo');
-    const startBtn = document.getElementById('startBtn');
-    const stopBtn = document.getElementById('stopBtn');
+    let html5QrCode;
 
-    let scanner;
+    function startScanner() {
+      const qrCodeSuccessCallback = (decodedText, decodedResult) => {
+        stopScanner(); // Stop after a successful scan
+        fetchDetails(decodedText);
+      };
 
-    // Start Scan
-    startBtn.addEventListener("click", () => {
-      startBtn.style.display = 'none';
-      stopBtn.style.display = 'inline-block';
-      standbyImage.style.display = 'none';
-      preview.style.display = 'block';
-      idCard.style.display = 'none';
+      html5QrCode = new Html5Qrcode("reader");
 
-      scanner = new Instascan.Scanner({ video: preview });
-      scanner.addListener('scan', function (content) {
-        fetchData(content);
+      // 🔹 Force back camera (environment)
+      const cameraConfig = { facingMode: { exact: "environment" } };
+
+      html5QrCode.start(
+        cameraConfig,
+        {
+          fps: 10,
+          qrbox: { width: 350, height: 350 }
+        },
+        qrCodeSuccessCallback
+      ).catch(err => {
+        console.error("Error starting scanner:", err);
       });
+    }
 
-      Instascan.Camera.getCameras().then(function (cameras) {
-        if (cameras.length > 0) {
-          scanner.start(cameras[0]);
-        } else {
-          alert('No cameras found.');
-        }
-      }).catch(function (e) {
-        console.error(e);
-      });
-    });
-
-    // Stop Scan
-    stopBtn.addEventListener("click", () => {
-      if (scanner) {
-        scanner.stop();
+    function stopScanner() {
+      if (html5QrCode) {
+        html5QrCode.stop().then(() => {
+          console.log("Scanner stopped.");
+          document.getElementById("reader").innerHTML =
+            '<img id="id_placeholder" src="images/placeholder.jpg" alt="ID Placeholder" />';
+        }).catch(err => {
+          console.error("Error stopping scanner:", err);
+        });
       }
-      preview.style.display = 'none';
-      stopBtn.style.display = 'none';
-      standbyImage.style.display = 'block';
-      startBtn.style.display = 'inline-block';
-      idCard.style.display = 'none';
-    });
+    }
 
-    // Fetch from Google Apps Script
-    async function fetchData(qrValue) {
+    async function fetchDetails(id) {
       try {
-        const url = "https://script.google.com/macros/s/AKfycbz-3ySdh3DBoe2St_NhNpCHlsREN36b5TAUMFiO8BqRQjrhePfWCXThEt4lDRHTLQrz/exec?qr=" + encodeURIComponent(qrValue);
-        const res = await fetch(url);
-        const data = await res.json();
+        const response = await fetch(`https://script.google.com/macros/s/AKfycbz-3ySdh3DBoe2St_NhNpCHlsREN36b5TAUMFiO8BqRQjrhePfWCXThEt4lDRHTLQrz/exec?id=${id}`);
+        const data = await response.json();
 
-        if (data && data.length > 0) {
-          const umpire = data[0];
-          fullNameEl.textContent = umpire["Given Name"] + " " + umpire["Middle Name"] + " " + umpire["Surname"];
-          addressEl.textContent = umpire["Address"];
-          birthdayEl.textContent = umpire["Birthday"];
-          sexEl.textContent = umpire["Sex"];
-          umpireClassEl.textContent = umpire["UmpireClass"];
-          statusEl.textContent = umpire["Status"];
-          idPhotoEl.src = umpire["Photo"] || "images/id_placeholder.png";
-
-          idCard.style.display = 'block';
+        if (data.error) {
+          alert("ID not found in database");
+          document.getElementById("id_display").src = "images/placeholder.jpg";
         } else {
-          alert("No record found for this QR code.");
+          // Replace with your own logic to render details
+          document.getElementById("id_display").src = "images/id_template.jpg";
+          console.log("Fetched data:", data);
         }
-      } catch (err) {
-        console.error(err);
+      } catch (error) {
+        console.error("Error fetching data:", error);
       }
     }
   </script>
