--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- ID Card Display -->
     <div class="id-card">
-      <img id="id_display" src="images/placeholder.jpg" alt="ID Card">
+      <img id="id_display" src="images/id_placeholder.png" alt="ID Card">
     </div>
   </div>
 
