--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- QR Scanner Box -->
     <div class="scanner">
       <div id="reader">
-        <img id="id_placeholder" src="images/placeholder.jpg" alt="ID Placeholder" />
+        <img id="id_placeholder" src="images/id_placeholder.png" alt="ID Placeholder" />
       </div>
       <button onclick="startScanner()">Start Scan</button>
       <button onclick="stopScanner()">Stop Scan</button>
