--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('images/background.jpg') center/cover no-repeat fixed;
+      background: url('images/background.png') center/cover no-repeat fixed;
       color: #333;
       text-align: center;
       padding: 20px;
